--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "remix-serve build"
   },
   "dependencies": {
+    "@babel/core": "^7.0",
+    "@babel/preset-react": "^7.18.6",
     "@remix-run/node": "^1.6.1",
     "@remix-run/react": "^1.6.1",
     "@remix-run/serve": "^1.6.1",
