--- a/package.json
+++ b/package.json
@@ -1,26 +1,33 @@
 {
   "private": true,
   "sideEffects": false,
+  "prisma": {
+    "seed": "node --require esbuild-register prisma/seed.ts"
+  },
   "scripts": {
     "build": "remix build",
     "dev": "remix dev",
     "start": "remix-serve build"
   },
   "dependencies": {
-    "@babel/core": "^7.0",
+    "@babel/core": "^7.18.6",
     "@babel/preset-react": "^7.18.6",
-    "@remix-run/node": "^1.6.1",
-    "@remix-run/react": "^1.6.1",
-    "@remix-run/serve": "^1.6.1",
+    "@prisma/client": "^4.0.0",
+    "@remix-run/node": "^1.6.3",
+    "@remix-run/react": "^1.6.3",
+    "@remix-run/serve": "^1.6.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.6.1",
-    "@remix-run/eslint-config": "^1.6.1",
+    "@remix-run/dev": "^1.6.3",
+    "@remix-run/eslint-config": "^1.6.3",
     "@types/react": "^17.0.47",
     "@types/react-dom": "^17.0.17",
+    "esbuild": ">=0.12 <1",
+    "esbuild-register": "^3.3.3",
     "eslint": "^8.18.0",
+    "prisma": "^4.0.0",
     "typescript": "^4.7.4"
   },
   "engines": {
