--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@remix-run/node": "^1.6.3",
     "@remix-run/react": "^1.6.3",
     "@remix-run/serve": "^1.6.3",
+    "bcrypt": "^5.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.6.3",
     "@remix-run/eslint-config": "^1.6.3",
+    "@types/bcrypt": "^5.0.0",
     "@types/react": "^17.0.47",
     "@types/react-dom": "^17.0.17",
     "esbuild": ">=0.12 <1",
