--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@remix-run/react": "^1.6.3",
     "@remix-run/serve": "^1.6.3",
     "bcrypt": "^5.0.1",
+    "install": "^0.13.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
